exports[`Storyshots App Default View 1`] = `
<div
  className="App">
  <nav
    className="navbar navbar-default navbar-fixed-top navbar-inverse">
    <div
      className="container-fluid">
      <div
        className="navbar-header">
        <a
          className="navbar-brand"
          href="/">
          Webpack Dependency Size
        </a>
      </div>
    </div>
  </nav>
  <aside
    className="container-fluid">
    <div
      className="row">
      <div
        className="col-xs-12">
        <div
          onClick={[Function]}
          style={undefined}>
          <input
            className="form-control"
            id="drag-drop-upload"
            style={
              Object {
                "display": "none",
              }
            }
            type="file" />
          <div
            className="well well-sm clearfix">
            <div
              className="form-horizontal">
              <div
                className="form-group col-sm-6">
                <label
                  className="control-label">
                  Drag & Drop your 
                  <code>
                    stats.json
                  </code>
                   file here
                </label>
                <span
                  className="col-sm-12 help-block"
                  id="drag-drop-helpblock">
                  Run 
                  <kbd>
                    webpack --json > stats.json
                  </kbd>
                   to get started.
                </span>
              </div>
              <div
                className="form-group col-sm-6"
                onClick={[Function]}>
                <label
                  className="col-sm-2 control-label"
                  htmlFor="data-file-picker">
                  File
                </label>
                <div
                  className="col-sm-10">
                  <select
                    className="form-control"
                    id="data-file-picker"
                    onChange={[Function]}>
                    <option
                      value="" />
                  </select>
                </div>
                <span
                  className="col-sm-12 help-block"
                  id="drag-drop-helpblock">
                  or pick an existing stats file.
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </aside>
  <main
    className="container-fluid">
    <div
      className="row">
      <div
        className="col-xs-12" />
    </div>
  </main>
</div>
`;

exports[`Storyshots Bootstrap/Button Disabled 1`] = `
<button
  className="btn btn-default "
  disabled="disabed"
  onClick={[Function]}
  type="button">
  Click Me!
</button>
`;

exports[`Storyshots Bootstrap/Button Disabled Success 1`] = `
<button
  className="btn btn-success "
  disabled="disabed"
  onClick={[Function]}
  type="button">
  Click Me!
</button>
`;

exports[`Storyshots Bootstrap/Button Large 1`] = `
<button
  className="btn btn-default btn-lg"
  disabled={null}
  onClick={[Function]}
  type="button">
  Click Me!
</button>
`;

exports[`Storyshots Bootstrap/Button Success 1`] = `
<button
  className="btn btn-success "
  disabled={null}
  onClick={[Function]}
  type="button">
  Click Me!
</button>
`;

exports[`Storyshots Bootstrap/Button With onClick 1`] = `
<button
  className="btn btn-default "
  disabled={null}
  onClick={[Function]}
  type="button">
  Click Me!
</button>
`;

exports[`Storyshots Bootstrap/CloseButton Disabled 1`] = `
<div
  style={
    Object {
      "background": "#ddd",
      "height": "100px",
      "width": "100px",
    }
  }>
  <button
    aria-label="Close"
    className="close"
    disabled="disabed"
    onClick={[Function]}
    type="button">
    <span
      aria-hidden="true">
      ×
    </span>
  </button>
</div>
`;

exports[`Storyshots Bootstrap/CloseButton With onClick 1`] = `
<div
  style={
    Object {
      "background": "#ddd",
      "height": "100px",
      "width": "100px",
    }
  }>
  <button
    aria-label="Close"
    className="close"
    disabled={null}
    onClick={[Function]}
    type="button">
    <span
      aria-hidden="true">
      ×
    </span>
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Basic 1`] = `
<div
  className="btn-group "
  style={undefined}>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-default dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button">
    Show flyout
     
    <span
      className="caret" />
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Basic Warning 1`] = `
<div
  className="btn-group "
  style={undefined}>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-warning dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button">
    Show flyout
     
    <span
      className="caret" />
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Basic align right 1`] = `
<div
  className="btn-group "
  style={undefined}>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-default dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button">
    Show flyout
     
    <span
      className="caret" />
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Basic custom style 1`] = `
<div
  className="btn-group "
  style={
    Object {
      "background": "red",
      "padding": "10px",
    }
  }>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-default dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button">
    Show flyout
     
    <span
      className="caret" />
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Basic disabled 1`] = `
<div
  className="btn-group "
  style={undefined}>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-default dropdown-toggle"
    data-toggle="dropdown"
    disabled="disabed"
    onClick={[Function]}
    type="button">
    Show flyout
     
    <span
      className="caret" />
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown List Content 1`] = `
<div
  className="btn-group "
  style={undefined}>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-default dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button">
    Show list
     
    <span
      className="caret" />
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Split Button 1`] = `
<div
  className="btn-group "
  style={undefined}>
  <button
    className="btn btn-default "
    disabled={null}
    onClick={[Function]}
    type="button">
    Show list
  </button>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-default dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button">
    <span
      aria-hidden="true"
      className="caret" />
    <span
      className="sr-only">
      expand
    </span>
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Split Button w/ Color 1`] = `
<div
  className="btn-group "
  style={undefined}>
  <button
    className="btn btn-success "
    disabled={null}
    onClick={[Function]}
    type="button">
    Show list
  </button>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-success dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button">
    <span
      aria-hidden="true"
      className="caret" />
    <span
      className="sr-only">
      expand
    </span>
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Split Button w/ Glyph 1`] = `
<div
  className="btn-group "
  style={undefined}>
  <button
    className="btn btn-default "
    disabled={null}
    onClick={[Function]}
    type="button">
    Show list
  </button>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-default dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button">
    <span
      aria-hidden="true"
      className="glyphicon glyphicon-star" />
    <span
      className="sr-only">
      expand
    </span>
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Split Button w/ List Content 1`] = `
<div
  className="btn-group "
  style={undefined}>
  <button
    className="btn btn-default "
    disabled={null}
    onClick={[Function]}
    type="button">
    Show list
  </button>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-default dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button">
    <span
      aria-hidden="true"
      className="caret" />
    <span
      className="sr-only">
      expand
    </span>
  </button>
</div>
`;

exports[`Storyshots FileInputRow File loaded 1`] = `
<div
  onClick={[Function]}
  style={undefined}>
  <input
    className="form-control"
    id="drag-drop-upload"
    style={
      Object {
        "display": "none",
      }
    }
    type="file" />
  <div
    className="well well-sm clearfix">
    <div
      className="form-horizontal">
      <div
        className="form-group col-sm-6">
        <label
          className="col-sm-2 control-label">
          Loaded
        </label>
        <div
          className="col-sm-10">
          <p
            className="form-control-static">
            stats.json
          </p>
        </div>
      </div>
      <div
        className="form-group col-sm-6"
        onClick={[Function]}>
        <label
          className="col-sm-2 control-label"
          htmlFor="data-file-picker">
          File
        </label>
        <div
          className="col-sm-10">
          <select
            className="form-control"
            id="data-file-picker"
            onChange={[Function]}>
            <option
              value="" />
          </select>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FileInputRow No file 1`] = `
<div
  onClick={[Function]}
  style={undefined}>
  <input
    className="form-control"
    id="drag-drop-upload"
    style={
      Object {
        "display": "none",
      }
    }
    type="file" />
  <div
    className="well well-sm clearfix">
    <div
      className="form-horizontal">
      <div
        className="form-group col-sm-6">
        <label
          className="control-label">
          Drag & Drop your 
          <code>
            stats.json
          </code>
           file here
        </label>
        <span
          className="col-sm-12 help-block"
          id="drag-drop-helpblock">
          Run 
          <kbd>
            webpack --json > stats.json
          </kbd>
           to get started.
        </span>
      </div>
      <div
        className="form-group col-sm-6"
        onClick={[Function]}>
        <label
          className="col-sm-2 control-label"
          htmlFor="data-file-picker">
          File
        </label>
        <div
          className="col-sm-10">
          <select
            className="form-control"
            id="data-file-picker"
            onChange={[Function]}>
            <option
              value="" />
          </select>
        </div>
        <span
          className="col-sm-12 help-block"
          id="drag-drop-helpblock">
          or pick an existing stats file.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SortLabel Something else is sorted 1`] = `
<span>
  Size
</span>
`;

exports[`Storyshots SortLabel This field is sorted ASC 1`] = `
<span>
  <span
    aria-hidden="true"
    className="glyphicon glyphicon-sort-by-attributes" />
   
  Size
</span>
`;

exports[`Storyshots SortLabel This field is sorted DESC 1`] = `
<span>
  <span
    aria-hidden="true"
    className="glyphicon glyphicon-sort-by-attributes-alt" />
   
  Name
</span>
`;

exports[`Storyshots SortLabel This field is type \`alpha\` 1`] = `
<span>
  <span
    aria-hidden="true"
    className="glyphicon glyphicon-sort-by-alphabet" />
   
  Name
</span>
`;

exports[`Storyshots SortLabel This field is type \`order\` 1`] = `
<span>
  <span
    aria-hidden="true"
    className="glyphicon glyphicon-sort-by-order" />
   
  Rank
</span>
`;

exports[`Storyshots Unit 2.4 Bytes (b) 1`] = `
<span
  title="2">
  2.4 B
</span>
`;

exports[`Storyshots Unit 2.4 Gigabytes (GB) 1`] = `
<span
  title="2,400,000,000">
  2.4 GB
</span>
`;

exports[`Storyshots Unit 2.4 Kilobytes (KB) 1`] = `
<span
  title="2,400">
  2.4 KB
</span>
`;

exports[`Storyshots Unit 2.4 Megabytes (MB) 1`] = `
<span
  title="2,400,000">
  2.4 MB
</span>
`;

exports[`Storyshots Unit 2.4 Terabytes (TB) 1`] = `
<span
  title="2,400,000,000,000">
  2.4 TB
</span>
`;

exports[`Storyshots formatModuleName delegated dll 1`] = `
<span>
  <span
    style={
      Object {
        "color": "#aaa",
      }
    }>
     
    
  </span>
  <span>
    delegated ./node_modules/classnames/index.js from dll-reference vendor
  </span>
  <br />
</span>
`;

exports[`Storyshots formatModuleName loader 1`] = `
<span>
  <span
    style={
      Object {
        "color": "#aaa",
      }
    }>
     
    ./~/html-webpack-plugin/lib/loader.js!
  </span>
  <span>
    ./public/index.html
  </span>
  <br />
</span>
`;

exports[`Storyshots formatModuleName loader with query 1`] = `
<span>
  <span
    style={
      Object {
        "color": "#aaa",
      }
    }>
     
    ./node_modules/babel-loader/lib/index.js?{\"babelrc\":false,\"presets\":[\"./node_modules/react-scripts/node_modules/babel-preset-react-app/index.js\"],\"cacheDirectory\":true}!./node_modules/eslint-loader/index.js!
  </span>
  <span>
    ./src/index.js
  </span>
  <br />
</span>
`;

exports[`Storyshots formatModuleName main and loader with query 1`] = `
<span>
  <span
    style={
      Object {
        "color": "#aaa",
      }
    }>
     
    main ./node_modules/babel-loader/lib/index.js?{\"babelrc\":false,\"presets\":[\"./node_modules/react-scripts/node_modules/babel-preset-react-app/index.js\"],\"cacheDirectory\":true}!./node_modules/eslint-loader/index.js!
  </span>
  <span>
    ./src/index.js
  </span>
  <br />
</span>
`;

exports[`Storyshots formatModuleName multi 1`] = `
<span>
  <span
    style={
      Object {
        "color": "#aaa",
      }
    }>
     
    
  </span>
  <span>
    multi
  </span>
  <br />
  <span
    style={
      Object {
        "color": "#aaa",
      }
    }>
     
    
  </span>
  <span>
    main
  </span>
  <br />
</span>
`;

exports[`Storyshots formatModuleName node module 1`] = `
<span>
  <span
    style={
      Object {
        "color": "#aaa",
      }
    }>
     
    
  </span>
  <span>
    ./~/react-dev-utils/webpackHotDevClient.js
  </span>
  <br />
</span>
`;

exports[`Storyshots formatModuleName plain filepath 1`] = `
<span>
  <span
    style={
      Object {
        "color": "#aaa",
      }
    }>
     
    
  </span>
  <span>
    components/stats/__stories__/formatModuleName.stories.js
  </span>
  <br />
</span>
`;
